--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
 /*  your css code here. If applicable */
-table, th, tr, td {
-	 border:1px solid black;
+/* table, th, tr, td { */
+/* 	 border:1px solid black; */
 }
